@@ -12,7 +12,7 @@ public class Test {
 	 * @param args
 	 */
 	public static void main(String[] args) {
-		// TODO Auto-generated method stub
+
 		
 		
 			if ( MyUtils.isVersionHigherThan(1.6) )
